--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/cicd
 
 spring.datasource.username=root
-spring.datasource.password=2005@Tejesh
+spring.datasource.password=Mohanavamsi@14
 
 spring.jpa.hibernate.ddl-auto=update
 
